fixing dark mode slider

--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ body {
   right: 0;
   bottom: 0;
   background-color: #C4E7F3;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: .1s;
+  transition: .1s;
 }
 .slider:before {
   position: absolute;
